--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start">Pokreni</string>
+    <string name="canceled">Žao nam je. Vi posjedujete prepreku za primanje vakcine.</string>
+    <string name="next">Dalje</string>
 </resources>
