--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">COVID-19 vakcinacija</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="start">Pokreni</string>
+    <string name="start">Prijavi se</string>
     <string name="canceled">Žao nam je. Vi posjedujete prepreku za primanje vakcine.</string>
     <string name="next">Dalje</string>
     <string name="about">About</string>
@@ -12,4 +12,5 @@
     <string name="share_text">Uspješna prijava za vakcinaciju. Osoba %1$s %2$s %3$s. godine, telefon: %4$s, email: %5$s, prioritet: %6$s, izbor vakcine: %7$s . </string>
     <string name="share">Share</string>
     <string name="first_last_name_text">%1$s %2$s</string>
+    <string name="prijava_za_vakcinaciju">Prijava za vakcinaciju</string>
 </resources>
